fix spacing and styling on sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -184,7 +184,7 @@ main {
 #sidebar {
     width: 100%;
     margin: 0;
-    padding: 30px 0 0 0;
+    padding: 10px 0 10px 0;
 }
 
 #sidebar ul {
@@ -193,39 +193,9 @@ main {
     list-style: none;
 }
 
-#sidebar li {
-    margin: 0;
-    padding: 0;
-}
-
-#sidebar li ul {
-    margin: 0 0;
-    padding-bottom: 30px;
-}
-
-#sidebar li li {
-    line-height: 40px;
-    border-bottom: 1px solid #e7ebed;
-    margin: 0 0;
-    border-left: none;
-}
-
-#sidebar li li span {
-    display: block;
-    margin-top: -20px;
-    padding: 0;
-    font-size: 11px;
-    font-style: italic;
-}
-
-#sidebar li li a {
-    padding: 0 0 0 20px;
-    background: url(../img/img04.jpg) no-repeat left 50%;
-}
-
 #sidebar h2 {
     height: 38px;
-    padding: 0 0 30px 0;
+    padding: 15px 0 0 0;
     letter-spacing: -0.5px;
     font-size: 1.8em;
     color: #222222;
@@ -239,10 +209,7 @@ main {
 
 #sidebar a {
     border: none;
-}
-
-#sidebar a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* Footer */
